--- a/templates/index.html
+++ b/templates/index.html
@@ -64,12 +64,6 @@
                                 </div>
                                 {% endfor %}
                             </div>
-                            <div class="swiper-button-prev">
-                                <i class="fa-regular fa-chevron-left"></i>
-                            </div>
-                            <div class="swiper-button-next">
-                                <i class="fa-regular fa-chevron-right"></i>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -183,6 +177,21 @@
                                     </li>
                                 </ul>
                             </li>
+
+                                                        <li class="main-hero_action_item">
+                                                            <span>VIDEOGALEREYA</span>
+                                                            <ul class="main-hero_action_posts photo_gallery">
+                                                                <li class="main-hero_action_post">
+                                                                    <video src="https://media.utube.uz/videos/ab603ee4bc2240297bb4961073251ec5.mp4" controls=""></video>
+                                                                </li>
+                                                                <li class="main-hero_action_post">
+                                                                    <video src="https://media.utube.uz/videos/ab603ee4bc2240297bb4961073251ec5.mp4" controls=""></video>
+                                                                </li>
+                                                                <li class="main-hero_action_post">
+                                                                    <video src="https://media.utube.uz/videos/ab603ee4bc2240297bb4961073251ec5.mp4" controls=""></video>
+                                                                </li>
+                                                            </ul>
+                                                        </li>
                         </ul>
                     <div class="main-hero_side_bar_slider">
                         <h1 class="wrapper_title small">
@@ -205,12 +214,6 @@
                                     </div>
                                 </div>
                                 {% endfor %}
-                            </div>
-                            <div class="swiper-button-prev">
-                                <i class="fa-regular fa-chevron-left"></i>
-                            </div>
-                            <div class="swiper-button-next">
-                                <i class="fa-regular fa-chevron-right"></i>
                             </div>
                         </div>
                     </div>
