--- a/templates/index.html
+++ b/templates/index.html
@@ -71,8 +71,8 @@
                 <div class="main-hero_actions">
                         <ul class="main-hero_action_list">
                             <li class="main-hero_action_item">
-                                <span>XIZMATLAR</span>
-                                <ul class="main-hero_action_posts">
+                                <span class="active">XIZMATLAR</span>
+                                <ul class="main-hero_action_posts" style="max-height: 118px;">
                                     <li class="main-hero_action_post">
                                         <a href="#" class="main-hero_action_title">
                                             <img class="main-hero_action_img" src="./assets/img/vil-serv-1.png" alt="">
