--- a/templates/index.html
+++ b/templates/index.html
@@ -71,87 +71,63 @@
                             <div class="main-hero_actions">
                                 <div class="main-hero_action_wrapper">
                                 <ul class="main-hero_action_list">
-                                    <li class="main-hero_action_item xizmatlar active">
-                                        <span class="active">XIZMATLAR</span>
+                                    <li class="main-hero_action_item {{ tag.title }} active">
+                                        <span class="active">{{ tag.title }}</span>
                                     </li>
-                                    <li class="main-hero_action_item bolimlar">
-                                        <span class="active">БЎЛИМЛАР</span>
-                                    </li>
-                                    <li class="main-hero_action_item xizmatlar">
-                                        <span class="active">XIZMATLAR</span>
-                                    </li>
-                                    <li class="main-hero_action_item xizmatlar">
-                                        <span class="active">XIZMATLAR</span>
-                                    </li>
-                                </ul>
-
-                                <ul class="main-hero_action_posts xizmatlar">
-                                    <li class="main-hero_action_post">
-                                        <a href="#" class="main-hero_action_title">
-                                            <img class="main-hero_action_img" src="./assets/img/vil-serv-1.png" alt="">
-                                            ИНТЕРАКТИВ ХИЗМАТЛАР
-                                        </a>
-                                    </li>
-                                    <li class="main-hero_action_post">
-                                        <a href="#" class="main-hero_action_title">
-                                            <img class="main-hero_action_img" src="./assets/img/vil-serv-1.png" alt="">
-                                            ОЧИҚ МАЪЛУМОТЛАР
-                                        </a>
-                                    </li>
-                                    <li class="main-hero_action_post">
-                                        <a href="#" class="main-hero_action_title">
-                                            <img class="main-hero_action_img" src="./assets/img/vil-serv-1.png" alt="">
-                                            ХАЛҚ ДЕПУТАТЛАРИ ТОШКЕНТ ВИЛОЯТИ КЕНГАШИ
-                                        </a>
-                                    </li>
-                                    <div class="main-numbers_wrapper">
-                                        <ul class="main-hero_numbers_list">
-                                            <li class="main-hero_numbers_item left">
-                                                <h3 class="main-hero_info_title">{% trans 'ISHONCH TELEFONI' %}</h3>
-                                                <h1 class="main-hero_number">
-                                                    (0 371)
-                                                    200 88 11
-                                                </h1>
+                                    {% for tag in tags %}
+                                    <li class="main-hero_action_item {{ tag.title }}">
+                                        <span class="active">{{ tag.title }}</span>
+                                        <ul style="display: none;" class="main-hero_action_posts copiables" data="{{ tag.title }}">
+                                            {% for sub_tag in tag.get_subcategory %}
+                                            <li class="main-hero_action_post">
+                                                <a href="{{ sub_tag.link }}" class="main-hero_action_title">
+                                                    {% if sub_tag.image %}
+                                                    <img class="main-hero_action_img" src="{{ sub_tag.image.url }}" alt="">
+                                                    {% endif %}
+                                                    {{ sub_tag.title }}
+                                                </a>
                                             </li>
-                                            <li class="main-hero_numbers_item right">
-                                                <h3 class="main-hero_info_title">{% trans 'YAGONA TELEFON' %}</h3>
-                                                <h1 class="main-hero_number">
-                                                    (0 371)
-                                                    200 88 11
-                                                </h1>
-                                            </li>
+                                            {% endfor %}
                                         </ul>
-                                    </div>
+                                    </li>
+                                    {% endfor %}
                                 </ul>
+                                <div class="dropdown_add">
+                                    <ul class="main-hero_action_posts {{ tag.title }}">
+                                        {% for sub_tag in subtag_tag %}
+                                        <li class="main-hero_action_post">
+                                            <a href="{{ sub_tag.link }}" class="main-hero_action_title">
+                                                {% if sub_tag.image %}
+                                                <img class="main-hero_action_img" src="{{ sub_tag.image.url }}" alt="">
+                                                {% endif %}
+                                                {{ sub_tag.title }}
+                                            </a>
+                                        </li>
+                                        {% endfor %}
+                                    </ul>
+                                </div>
 
-                                <ul class="main-hero_action_posts bolimlar" style="display: none;">
-                                    <li class="main-hero_action_post">
-                                        <a href="#" class="main-hero_action_title">
-                                            <img class="main-hero_action_img" src="./assets/img/vil-serv-1.png" alt="">
-                                            TEST 5
-                                        </a>
-                                    </li>
-                                    <li class="main-hero_action_post">
-                                        <a href="#" class="main-hero_action_title">
-                                            <img class="main-hero_action_img" src="./assets/img/vil-serv-1.png" alt="">
-                                            TEST 6
-                                        </a>
-                                    </li>
-                                    <li class="main-hero_action_post">
-                                        <a href="#" class="main-hero_action_title">
-                                            <img class="main-hero_action_img" src="./assets/img/vil-serv-1.png" alt="">
-                                            TEST 7
-                                        </a>
-                                    </li>
-                                    <li class="main-hero_action_post">
-                                        <a href="#" class="main-hero_action_title">
-                                            <img class="main-hero_action_img" src="./assets/img/vil-serv-1.png" alt="">
-                                            TEST 8
-                                        </a>
-                                    </li>
-                                </ul>
+                                <div class="main-numbers_wrapper">
+                                    <ul class="main-hero_numbers_list">
+                                        <li class="main-hero_numbers_item left">
+                                            <h3 class="main-hero_info_title">{% trans 'ISHONCH TELEFONI' %}</h3>
+                                            <h1 class="main-hero_number">
+                                                (0 371)
+                                                200 88 11
+                                            </h1>
+                                        </li>
+                                        <li class="main-hero_numbers_item right">
+                                            <h3 class="main-hero_info_title">{% trans 'YAGONA TELEFON' %}</h3>
+                                            <h1 class="main-hero_number">
+                                                (0 371)
+                                                200 88 11
+                                            </h1>
+                                        </li>
+                                    </ul>
+                                </div>
 
                                 </div>
+                                
                                 <div class="main-hero_side_bar_slider action">
                                     <h1 class="wrapper_title small">
                                         {% trans 'AXBOROT XIZMATI RAHBARI' %}
@@ -168,8 +144,7 @@
                                                     <div class="main-hero_head_info">
                                                         {{ peop.content|safe }}
                                                     </div>
-                                                    <a href="{% url 'common:contact' %}" class="main-hero_contact_link" role="button">{% trans
-                                                        'Murojaat yuborish' %}</a>
+                                                    <a href="{% url 'common:contact' %}" class="main-hero_contact_link" role="button">{% trans 'Murojaat yuborish' %}</a>
                                                 </div>
                                             </div>
                                             {% endfor %}
@@ -213,4 +188,16 @@
 
 {% block scripts %}
     <script src="{% static './assets/lib/js/swiper_settings.js' %}"></script>
+    <script>
+        var copiables = document.querySelectorAll('.copiables');
+        var parentMenu = document.querySelector('.dropdown_add');
+        copiables.forEach(copy => {
+            parentMenu.innerHTML += copy.outerHTML;
+            copy.outerHTML = ''
+        })
+        document.querySelectorAll('[data]').forEach(elem => {
+            data = elem.getAttribute('data')
+            elem.classList.add(data)
+        })
+    </script>
 {% endblock scripts %}
