--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -47,7 +47,7 @@
             <div class="container">
                 <div class="header_wrapper">
                     <div class="header_logo">
-                        <a href="/">
+                        <a href="{% url 'common:home' %}">
                             <img src="{% static 'assets/img/logo.png' %}" alt="">
                             {% trans 'ANDIJON SHAXAR HOKIMLIGI' %}
                         </a>
